# ts-products

./: docker-compose.yml  main.py  pyproject.toml
config/: settings.py
controllers/: category_controller.py  measures_controller.py  price_controller.py  product_controller.py  stock_controller.py
daos/: category_dao.py  product_dao.py  product_measure_dao.py  product_price_dao.py  product_stock_dao.py
models/: category_model.py  product_measure_model.py  product_model.py
views/: alert_view.py  catalog_view.py  category_view.py  historic_views.py  product_read_by_view.py  product_update_view.py  product_view.py  to_do.txt
views_web/: web.py
views_web/templates/: categories.html  home.html  product_price.html  product_stock.html  products.html  products_measures.html
