[tool.poetry]
name = "ts-products-temp"
version = "0.1.0"
description = ""
authors = ["Victor Simao <victor.simao@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.15"
psycopg2-binary = "^2.8.6"
Flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
